name:                 aoc2020
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Sergey Dubakov
maintainer:           serge.dubakov@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable aoc2020
  main-is:              Day22Puzzle1.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base, directory, split, containers, sort, vector, parsec
  hs-source-dirs:       src
  default-language:     Haskell2010
